--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"); */
 
 @tailwind base;
 @tailwind components;
@@ -10,8 +10,12 @@
   box-sizing: border-box;
 }
 
+.title_font {
+  font-family: var(--font-pacifico), cursive; /* Apply Pacifico to paragraphs */
+}
+
 body {
-  font-family: Inter;
+  font-family: var(--font-inter), sans-serif; /* Default font as Inter */
 }
 
 @layer utilities {
